--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Multi-Page Website</title>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Welcome to My Website</h1>
         <nav>
