Added Navigation Menu comment

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Header Section -->
     <header>
         <h1>Welcome to My Website</h1>
+        <!-- Navigation Menu -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
