Added Important Comments

--- a/about.html
+++ b/about.html
@@ -8,17 +8,20 @@
 </head>
 
 <body>
+    <!-- Header Section-->
     <header>
         <h1>Michael Francoo</h1>
         <p>Aspiring Full-Stack Web Developer</p>
     </header>
 
+    <!-- About Me Section-->
     <section>
         <h2>About Me</h2>
         <p>I'm passionate about web development, currently learning HTML, CSS, and JavaScript while pursuing an ICT
             Diploma.</p>
     </section>
 
+    <!-- Skills Section-->
     <section>
         <h2>Skills</h2>
         <ul>
@@ -29,6 +32,7 @@
         </ul>
     </section>
 
+    <!-- Projects Section-->
     <section>
         <h2>Projects</h2>
         <ul>
@@ -37,6 +41,7 @@
         <p>More projects coming soon!</p>
     </section>
 
+    <!-- Contact Section-->
     <footer>
         <h3>Connect with Me</h3>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/michaelfrancoo">Michael Francoo</a></p>
