--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- Contact Form Section -->
     <h1>Contact Me:</h1>
     <section>
         <p>Please fill in the form below to contact me:</p>
