--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         </nav>
     </header>
     
+    <!-- Main Content Section -->
     <main>
         <h2>Home Page</h2>
         <p>This is the home page of our multi-page website.</p>
     </main>
     
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
